Fixed Layer Bug on Login Screen (z-index)

--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -3,6 +3,7 @@
   height: 100%;
   opacity: 1;
   animation: fadeIn ease 1s;
+  z-index: 1000;
 }
 
 .auth0-lock-widget-container {
